[gd_scene load_steps=4 format=3 uid="uid://b362dxgf8xwdb"]

[ext_resource type="Script" path="res://assets/sounds/sound_manager.gd" id="1_ehfbi"]
[ext_resource type="AudioStream" uid="uid://bhomkaq0fa8vh" path="res://assets/sounds/skadePiano.wav" id="2_58mke"]
[ext_resource type="AudioStream" uid="uid://skwwecx7n116" path="res://assets/sounds/SkiltDemp.wav" id="2_ogsf2"]

[node name="SoundManager" type="Node"]
script = ExtResource("1_ehfbi")

[node name="BackgroundMusic" type="Node" parent="."]

[node name="MenuTrack" type="AudioStreamPlayer" parent="BackgroundMusic"]
bus = &"music"

[node name="ForestTrack" type="AudioStreamPlayer" parent="BackgroundMusic"]
bus = &"music"

[node name="SoundEffects" type="Node" parent="."]

[node name="SkiltDemp" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("2_ogsf2")
bus = &"sfx"

[node name="SkadePiano" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("2_58mke")
